[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/states/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/Russo_One.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[node name="OptionsMenu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )
script = ExtResource( 1 )

[node name="C" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="V" type="VBoxContainer" parent="C"]
margin_left = 102.0
margin_top = 54.0
margin_right = 538.0
margin_bottom = 426.0
custom_constants/separation = 30

[node name="Title" type="Label" parent="C/V"]
margin_right = 436.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1

[node name="G" type="GridContainer" parent="C/V"]
margin_left = 23.0
margin_top = 86.0
margin_right = 412.0
margin_bottom = 180.0
size_flags_horizontal = 4
custom_constants/hseparation = 25
columns = 3

[node name="SoundVolumeNameLabel" type="Label" parent="C/V/G"]
margin_right = 139.0
margin_bottom = 19.0
text = "Sound Volume"
align = 2

[node name="SoundVolumeSlider" type="HSlider" parent="C/V/G"]
unique_name_in_owner = true
margin_left = 164.0
margin_right = 264.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
max_value = 1.0
step = 0.05
value = 1.0

[node name="SoundVolumeLabel" type="Label" parent="C/V/G"]
unique_name_in_owner = true
margin_left = 289.0
margin_right = 389.0
margin_bottom = 19.0
text = "100%"

[node name="MusicVolumeNameLabel" type="Label" parent="C/V/G"]
margin_top = 23.0
margin_right = 139.0
margin_bottom = 42.0
text = "Music Volume"
align = 2

[node name="MusicVolumeSlider" type="HSlider" parent="C/V/G"]
unique_name_in_owner = true
margin_left = 164.0
margin_top = 23.0
margin_right = 264.0
margin_bottom = 39.0
rect_min_size = Vector2( 100, 0 )
max_value = 1.0
step = 0.05
value = 0.5

[node name="MusicVolumeLabel" type="Label" parent="C/V/G"]
unique_name_in_owner = true
margin_left = 289.0
margin_top = 23.0
margin_right = 389.0
margin_bottom = 42.0
text = "50%"

[node name="AnimationNameLabel" type="Label" parent="C/V/G"]
margin_top = 46.0
margin_right = 139.0
margin_bottom = 65.0
text = "Animation Speed"
align = 2

[node name="AnimationSpeedSlider" type="HSlider" parent="C/V/G"]
unique_name_in_owner = true
margin_left = 164.0
margin_top = 46.0
margin_right = 264.0
margin_bottom = 62.0
max_value = 4.0
value = 1.0
tick_count = 5
ticks_on_borders = true

[node name="AnimationSpeedLabel" type="Label" parent="C/V/G"]
unique_name_in_owner = true
margin_left = 289.0
margin_top = 46.0
margin_right = 389.0
margin_bottom = 65.0
rect_min_size = Vector2( 100, 0 )
text = "Normal"

[node name="FullscreenLabel" type="Label" parent="C/V/G"]
margin_top = 72.0
margin_right = 139.0
margin_bottom = 91.0
text = "Windowed Mode"
align = 2

[node name="FullscreenOptionButton" type="OptionButton" parent="C/V/G"]
unique_name_in_owner = true
margin_left = 164.0
margin_top = 69.0
margin_right = 264.0
margin_bottom = 94.0

[node name="FullscreenSpacer" type="Control" parent="C/V/G"]
margin_left = 289.0
margin_top = 69.0
margin_right = 389.0
margin_bottom = 94.0

[node name="V" type="VBoxContainer" parent="C/V"]
margin_top = 210.0
margin_right = 436.0
margin_bottom = 317.0

[node name="SpeedrunLabel" type="Label" parent="C/V/V"]
margin_right = 436.0
margin_bottom = 28.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 2 )
text = "Speedrun Settings"
align = 1

[node name="V" type="VBoxContainer" parent="C/V/V"]
margin_top = 32.0
margin_right = 436.0
margin_bottom = 107.0
custom_constants/separation = -5

[node name="SpeedrunTimerCheck" type="CheckButton" parent="C/V/V/V"]
unique_name_in_owner = true
margin_left = 88.0
margin_right = 348.0
margin_bottom = 40.0
focus_neighbour_bottom = NodePath("../LivesplitSettings/AutosplitterEnabledCheck")
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Show Speedrun Timer"

[node name="LivesplitSettings" type="HBoxContainer" parent="C/V/V/V"]
unique_name_in_owner = true
margin_top = 35.0
margin_right = 436.0
margin_bottom = 75.0
alignment = 1

[node name="AutosplitterEnabledCheck" type="CheckButton" parent="C/V/V/V/LivesplitSettings"]
unique_name_in_owner = true
margin_right = 292.0
margin_bottom = 40.0
focus_neighbour_top = NodePath("../../SpeedrunTimerCheck")
focus_neighbour_right = NodePath("../AutosplitterPortSpinBox")
size_flags_horizontal = 4
size_flags_vertical = 4
text = "LiveSplit One Autosplitter"
align = 1

[node name="AutosplitterPortLabel" type="Label" parent="C/V/V/V/LivesplitSettings"]
margin_left = 296.0
margin_top = 10.0
margin_right = 346.0
margin_bottom = 29.0
rect_min_size = Vector2( 50, 0 )
text = "Port"
align = 2

[node name="AutosplitterPortSpinBox" type="SpinBox" parent="C/V/V/V/LivesplitSettings"]
unique_name_in_owner = true
margin_left = 350.0
margin_top = 5.0
margin_right = 436.0
margin_bottom = 34.0
focus_neighbour_left = NodePath("../AutosplitterEnabledCheck")
size_flags_vertical = 4
max_value = 65535.0
value = 5678.0

[node name="BackButton" type="Button" parent="C/V"]
unique_name_in_owner = true
margin_left = 168.0
margin_top = 347.0
margin_right = 268.0
margin_bottom = 372.0
rect_min_size = Vector2( 100, 0 )
focus_neighbour_top = NodePath("../V/V/LivesplitSettings/AutosplitterEnabledCheck")
size_flags_horizontal = 4
text = "Back"

[connection signal="value_changed" from="C/V/G/SoundVolumeSlider" to="." method="_on_SoundVolumeSlider_value_changed"]
[connection signal="value_changed" from="C/V/G/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="value_changed" from="C/V/G/AnimationSpeedSlider" to="." method="_on_AnimationSpeedSlider_value_changed"]
[connection signal="item_selected" from="C/V/G/FullscreenOptionButton" to="." method="_on_FullscreenOptionsButton_item_selected"]
[connection signal="toggled" from="C/V/V/V/SpeedrunTimerCheck" to="." method="_on_SpeedrunTimerCheck_toggled"]
[connection signal="toggled" from="C/V/V/V/LivesplitSettings/AutosplitterEnabledCheck" to="." method="_on_AutosplitterEnabledCheck_toggled"]
[connection signal="value_changed" from="C/V/V/V/LivesplitSettings/AutosplitterPortSpinBox" to="." method="_on_AutosplitterPortSpinBox_value_changed"]
[connection signal="pressed" from="C/V/BackButton" to="." method="close_menu"]
